Pargo.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from Pargo.y
-----------------------------------------------------------------------------

state 31 contains 1 shift/reduce conflicts.
state 32 contains 1 shift/reduce conflicts.
state 33 contains 2 shift/reduce conflicts.
state 110 contains 1 shift/reduce conflicts.
state 117 contains 2 shift/reduce conflicts.
state 130 contains 2 shift/reduce conflicts.

terminal L_err is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pStart -> Start                             (0)
	Integer -> L_integ                                 (1)
	Double -> L_doubl                                  (2)
	Char -> L_charac                                   (3)
	String -> L_quoted                                 (4)
	Id -> L_Id                                         (5)
	Start -> 'package' Id ListDecl                     (6)
	Decl -> 'func' Id '(' ListParam ')' Type Block     (7)
	Decl -> 'func' Id '(' ListParam ')' Block          (8)
	Decl -> 'var' ListId Type                          (9)
	Decl -> 'var' ListId '=' ListExpR                  (10)
	ShortVarDecl -> ListId ':=' ListExpR               (11)
	Param -> ListId Type                               (12)
	Param -> Pass ListId Type                          (13)
	Pass -> 'val'                                      (14)
	Pass -> 'ref'                                      (15)
	Pass -> 'valres'                                   (16)
	Type -> 'int'                                      (17)
	Type -> 'bool'                                     (18)
	Type -> 'float'                                    (19)
	Type -> 'char'                                     (20)
	Type -> 'string'                                   (21)
	Type -> '[' Integer ']' Type                       (22)
	Type -> '*' Type                                   (23)
	Block -> '{' ListStatement '}'                     (24)
	Statement -> Block                                 (25)
	Statement -> StatementSmpl                         (26)
	Statement -> 'return' ExpR                         (27)
	Statement -> 'if' ExpR Block                       (28)
	Statement -> 'if' ExpR Block 'else' Block          (29)
	Statement -> 'if' StatementSmpl ';' ExpR Block     (30)
	Statement -> 'if' StatementSmpl ';' ExpR Block 'else' Block   (31)
	Statement -> 'for' ListStatementSmpl ';' ExpR ';' ListStatementSmpl Block   (32)
	Statement -> 'for' ExpR Block                      (33)
	Statement -> Decl                                  (34)
	Statement -> 'break'                               (35)
	Statement -> 'continue'                            (36)
	Statement -> 'try' Block 'catch' Block             (37)
	Statement -> 'write' '(' ExpR ')'                  (38)
	Statement -> 'read' '(' ExpR ')'                   (39)
	StatementSmpl -> ShortVarDecl                      (40)
	StatementSmpl -> ExpR                              (41)
	StatementSmpl -> ExpL '=' ExpR                     (42)
	ExpL -> Id                                         (43)
	ExpL -> ExpL '[' ExpR ']'                          (44)
	ExpL -> '*' ExpR                                   (45)
	ExpR -> ExpR '+' ExpR                              (46)
	ExpR -> ExpR '-' ExpR                              (47)
	ExpR -> ExpR '*' ExpR                              (48)
	ExpR -> ExpR '/' ExpR                              (49)
	ExpR -> ExpR '%' ExpR                              (50)
	ExpR -> ExpR '==' ExpR                             (51)
	ExpR -> ExpR '!=' ExpR                             (52)
	ExpR -> ExpR '<' ExpR                              (53)
	ExpR -> ExpR '<=' ExpR                             (54)
	ExpR -> ExpR '>' ExpR                              (55)
	ExpR -> ExpR '>=' ExpR                             (56)
	ExpR -> ExpR '&&' ExpR                             (57)
	ExpR -> ExpR '||' ExpR                             (58)
	ExpR -> '!' ExpR                                   (59)
	ExpR -> '-' ExpR                                   (60)
	ExpR -> Value                                      (61)
	ExpR -> ExpL                                       (62)
	ExpR -> Id '(' ')'                                 (63)
	ExpR -> Id '(' ListExpR ')'                        (64)
	ExpR -> '&' ExpL                                   (65)
	ExpR -> '(' ExpR ')'                               (66)
	Value -> Integer                                   (67)
	Value -> Double                                    (68)
	Value -> Char                                      (69)
	Value -> String                                    (70)
	Value -> Boolean                                   (71)
	Boolean -> 'true'                                  (72)
	Boolean -> 'false'                                 (73)
	ListId -> Id                                       (74)
	ListId -> Id ',' ListId                            (75)
	ListExpR -> ExpR                                   (76)
	ListExpR -> ExpR ',' ListExpR                      (77)
	ListStatementSmpl ->                               (78)
	ListStatementSmpl -> StatementSmpl                 (79)
	ListDecl ->                                        (80)
	ListDecl -> ListDecl Decl                          (81)
	ListParam ->                                       (82)
	ListParam -> Param                                 (83)
	ListParam -> Param ',' ListParam                   (84)
	ListStatement ->                                   (85)
	ListStatement -> ListStatement Statement           (86)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	':='           { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'['            { PT _ (TS _ 21) }
	']'            { PT _ (TS _ 22) }
	'bool'         { PT _ (TS _ 23) }
	'break'        { PT _ (TS _ 24) }
	'catch'        { PT _ (TS _ 25) }
	'char'         { PT _ (TS _ 26) }
	'continue'     { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'false'        { PT _ (TS _ 29) }
	'float'        { PT _ (TS _ 30) }
	'for'          { PT _ (TS _ 31) }
	'func'         { PT _ (TS _ 32) }
	'if'           { PT _ (TS _ 33) }
	'int'          { PT _ (TS _ 34) }
	'package'      { PT _ (TS _ 35) }
	'read'         { PT _ (TS _ 36) }
	'ref'          { PT _ (TS _ 37) }
	'return'       { PT _ (TS _ 38) }
	'string'       { PT _ (TS _ 39) }
	'true'         { PT _ (TS _ 40) }
	'try'          { PT _ (TS _ 41) }
	'val'          { PT _ (TS _ 42) }
	'valres'       { PT _ (TS _ 43) }
	'var'          { PT _ (TS _ 44) }
	'write'        { PT _ (TS _ 45) }
	'{'            { PT _ (TS _ 46) }
	'||'           { PT _ (TS _ 47) }
	'}'            { PT _ (TS _ 48) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }
	L_err          { _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pStart   rule  0
	Integer         rule  1
	Double          rule  2
	Char            rule  3
	String          rule  4
	Id              rule  5
	Start           rule  6
	Decl            rules 7, 8, 9, 10
	ShortVarDecl    rule  11
	Param           rules 12, 13
	Pass            rules 14, 15, 16
	Type            rules 17, 18, 19, 20, 21, 22, 23
	Block           rule  24
	Statement       rules 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39
	StatementSmpl   rules 40, 41, 42
	ExpL            rules 43, 44, 45
	ExpR            rules 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66
	Value           rules 67, 68, 69, 70, 71
	Boolean         rules 72, 73
	ListId          rules 74, 75
	ListExpR        rules 76, 77
	ListStatementSmpl rules 78, 79
	ListDecl        rules 80, 81
	ListParam       rules 82, 83, 84
	ListStatement   rules 85, 86

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'package'      shift, and enter state 4

	Start          goto state 3

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'break'        reduce using rule 1
	'continue'     reduce using rule 1
	'false'        reduce using rule 1
	'for'          reduce using rule 1
	'func'         reduce using rule 1
	'if'           reduce using rule 1
	'read'         reduce using rule 1
	'return'       reduce using rule 1
	'true'         reduce using rule 1
	'try'          reduce using rule 1
	'var'          reduce using rule 1
	'write'        reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	L_integ        reduce using rule 1
	L_doubl        reduce using rule 1
	L_charac       reduce using rule 1
	L_quoted       reduce using rule 1
	L_Id           reduce using rule 1
	%eof           reduce using rule 1


State 3

	%start_pStart -> Start .                            (rule 0)

	%eof           accept


State 4

	Start -> 'package' . Id ListDecl                    (rule 6)

	L_Id           shift, and enter state 6

	Id             goto state 5

State 5

	Start -> 'package' Id . ListDecl                    (rule 6)

	'func'         reduce using rule 80
	'var'          reduce using rule 80
	%eof           reduce using rule 80

	ListDecl       goto state 7

State 6

	Id -> L_Id .                                        (rule 5)

	'!'            reduce using rule 5
	'!='           reduce using rule 5
	'%'            reduce using rule 5
	'&'            reduce using rule 5
	'&&'           reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'/'            reduce using rule 5
	':='           reduce using rule 5
	';'            reduce using rule 5
	'<'            reduce using rule 5
	'<='           reduce using rule 5
	'='            reduce using rule 5
	'=='           reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'['            reduce using rule 5
	']'            reduce using rule 5
	'bool'         reduce using rule 5
	'break'        reduce using rule 5
	'char'         reduce using rule 5
	'continue'     reduce using rule 5
	'false'        reduce using rule 5
	'float'        reduce using rule 5
	'for'          reduce using rule 5
	'func'         reduce using rule 5
	'if'           reduce using rule 5
	'int'          reduce using rule 5
	'read'         reduce using rule 5
	'return'       reduce using rule 5
	'string'       reduce using rule 5
	'true'         reduce using rule 5
	'try'          reduce using rule 5
	'var'          reduce using rule 5
	'write'        reduce using rule 5
	'{'            reduce using rule 5
	'||'           reduce using rule 5
	'}'            reduce using rule 5
	L_integ        reduce using rule 5
	L_doubl        reduce using rule 5
	L_charac       reduce using rule 5
	L_quoted       reduce using rule 5
	L_Id           reduce using rule 5
	%eof           reduce using rule 5


State 7

	Start -> 'package' Id ListDecl .                    (rule 6)
	ListDecl -> ListDecl . Decl                         (rule 81)

	'func'         shift, and enter state 9
	'var'          shift, and enter state 10
	%eof           reduce using rule 6

	Decl           goto state 8

State 8

	ListDecl -> ListDecl Decl .                         (rule 81)

	'func'         reduce using rule 81
	'var'          reduce using rule 81
	%eof           reduce using rule 81


State 9

	Decl -> 'func' . Id '(' ListParam ')' Type Block    (rule 7)
	Decl -> 'func' . Id '(' ListParam ')' Block         (rule 8)

	L_Id           shift, and enter state 6

	Id             goto state 13

State 10

	Decl -> 'var' . ListId Type                         (rule 9)
	Decl -> 'var' . ListId '=' ListExpR                 (rule 10)

	L_Id           shift, and enter state 6

	Id             goto state 11
	ListId         goto state 12

State 11

	ListId -> Id .                                      (rule 74)
	ListId -> Id . ',' ListId                           (rule 75)

	'*'            reduce using rule 74
	','            shift, and enter state 24
	':='           reduce using rule 74
	'='            reduce using rule 74
	'['            reduce using rule 74
	'bool'         reduce using rule 74
	'char'         reduce using rule 74
	'float'        reduce using rule 74
	'int'          reduce using rule 74
	'string'       reduce using rule 74


State 12

	Decl -> 'var' ListId . Type                         (rule 9)
	Decl -> 'var' ListId . '=' ListExpR                 (rule 10)

	'*'            shift, and enter state 16
	'='            shift, and enter state 17
	'['            shift, and enter state 18
	'bool'         shift, and enter state 19
	'char'         shift, and enter state 20
	'float'        shift, and enter state 21
	'int'          shift, and enter state 22
	'string'       shift, and enter state 23

	Type           goto state 15

State 13

	Decl -> 'func' Id . '(' ListParam ')' Type Block    (rule 7)
	Decl -> 'func' Id . '(' ListParam ')' Block         (rule 8)

	'('            shift, and enter state 14


State 14

	Decl -> 'func' Id '(' . ListParam ')' Type Block    (rule 7)
	Decl -> 'func' Id '(' . ListParam ')' Block         (rule 8)

	')'            reduce using rule 82
	'ref'          shift, and enter state 52
	'val'          shift, and enter state 53
	'valres'       shift, and enter state 54
	L_Id           shift, and enter state 6

	Id             goto state 11
	Param          goto state 48
	Pass           goto state 49
	ListId         goto state 50
	ListParam      goto state 51

State 15

	Decl -> 'var' ListId Type .                         (rule 9)

	'!'            reduce using rule 9
	'&'            reduce using rule 9
	'('            reduce using rule 9
	'*'            reduce using rule 9
	'-'            reduce using rule 9
	'break'        reduce using rule 9
	'continue'     reduce using rule 9
	'false'        reduce using rule 9
	'for'          reduce using rule 9
	'func'         reduce using rule 9
	'if'           reduce using rule 9
	'read'         reduce using rule 9
	'return'       reduce using rule 9
	'true'         reduce using rule 9
	'try'          reduce using rule 9
	'var'          reduce using rule 9
	'write'        reduce using rule 9
	'{'            reduce using rule 9
	'}'            reduce using rule 9
	L_integ        reduce using rule 9
	L_doubl        reduce using rule 9
	L_charac       reduce using rule 9
	L_quoted       reduce using rule 9
	L_Id           reduce using rule 9
	%eof           reduce using rule 9


State 16

	Type -> '*' . Type                                  (rule 23)

	'*'            shift, and enter state 16
	'['            shift, and enter state 18
	'bool'         shift, and enter state 19
	'char'         shift, and enter state 20
	'float'        shift, and enter state 21
	'int'          shift, and enter state 22
	'string'       shift, and enter state 23

	Type           goto state 47

State 17

	Decl -> 'var' ListId '=' . ListExpR                 (rule 10)

	'!'            shift, and enter state 37
	'&'            shift, and enter state 38
	'('            shift, and enter state 39
	'*'            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_integ        shift, and enter state 2
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 6

	Integer        goto state 27
	Double         goto state 28
	Char           goto state 29
	String         goto state 30
	Id             goto state 31
	ExpL           goto state 32
	ExpR           goto state 33
	Value          goto state 34
	Boolean        goto state 35
	ListExpR       goto state 36

State 18

	Type -> '[' . Integer ']' Type                      (rule 22)

	L_integ        shift, and enter state 2

	Integer        goto state 26

State 19

	Type -> 'bool' .                                    (rule 18)

	'!'            reduce using rule 18
	'&'            reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	'*'            reduce using rule 18
	','            reduce using rule 18
	'-'            reduce using rule 18
	'break'        reduce using rule 18
	'continue'     reduce using rule 18
	'false'        reduce using rule 18
	'for'          reduce using rule 18
	'func'         reduce using rule 18
	'if'           reduce using rule 18
	'read'         reduce using rule 18
	'return'       reduce using rule 18
	'true'         reduce using rule 18
	'try'          reduce using rule 18
	'var'          reduce using rule 18
	'write'        reduce using rule 18
	'{'            reduce using rule 18
	'}'            reduce using rule 18
	L_integ        reduce using rule 18
	L_doubl        reduce using rule 18
	L_charac       reduce using rule 18
	L_quoted       reduce using rule 18
	L_Id           reduce using rule 18
	%eof           reduce using rule 18


State 20

	Type -> 'char' .                                    (rule 20)

	'!'            reduce using rule 20
	'&'            reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	'*'            reduce using rule 20
	','            reduce using rule 20
	'-'            reduce using rule 20
	'break'        reduce using rule 20
	'continue'     reduce using rule 20
	'false'        reduce using rule 20
	'for'          reduce using rule 20
	'func'         reduce using rule 20
	'if'           reduce using rule 20
	'read'         reduce using rule 20
	'return'       reduce using rule 20
	'true'         reduce using rule 20
	'try'          reduce using rule 20
	'var'          reduce using rule 20
	'write'        reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	L_integ        reduce using rule 20
	L_doubl        reduce using rule 20
	L_charac       reduce using rule 20
	L_quoted       reduce using rule 20
	L_Id           reduce using rule 20
	%eof           reduce using rule 20


State 21

	Type -> 'float' .                                   (rule 19)

	'!'            reduce using rule 19
	'&'            reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'break'        reduce using rule 19
	'continue'     reduce using rule 19
	'false'        reduce using rule 19
	'for'          reduce using rule 19
	'func'         reduce using rule 19
	'if'           reduce using rule 19
	'read'         reduce using rule 19
	'return'       reduce using rule 19
	'true'         reduce using rule 19
	'try'          reduce using rule 19
	'var'          reduce using rule 19
	'write'        reduce using rule 19
	'{'            reduce using rule 19
	'}'            reduce using rule 19
	L_integ        reduce using rule 19
	L_doubl        reduce using rule 19
	L_charac       reduce using rule 19
	L_quoted       reduce using rule 19
	L_Id           reduce using rule 19
	%eof           reduce using rule 19


State 22

	Type -> 'int' .                                     (rule 17)

	'!'            reduce using rule 17
	'&'            reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	'*'            reduce using rule 17
	','            reduce using rule 17
	'-'            reduce using rule 17
	'break'        reduce using rule 17
	'continue'     reduce using rule 17
	'false'        reduce using rule 17
	'for'          reduce using rule 17
	'func'         reduce using rule 17
	'if'           reduce using rule 17
	'read'         reduce using rule 17
	'return'       reduce using rule 17
	'true'         reduce using rule 17
	'try'          reduce using rule 17
	'var'          reduce using rule 17
	'write'        reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	L_integ        reduce using rule 17
	L_doubl        reduce using rule 17
	L_charac       reduce using rule 17
	L_quoted       reduce using rule 17
	L_Id           reduce using rule 17
	%eof           reduce using rule 17


State 23

	Type -> 'string' .                                  (rule 21)

	'!'            reduce using rule 21
	'&'            reduce using rule 21
	'('            reduce using rule 21
	')'            reduce using rule 21
	'*'            reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	'break'        reduce using rule 21
	'continue'     reduce using rule 21
	'false'        reduce using rule 21
	'for'          reduce using rule 21
	'func'         reduce using rule 21
	'if'           reduce using rule 21
	'read'         reduce using rule 21
	'return'       reduce using rule 21
	'true'         reduce using rule 21
	'try'          reduce using rule 21
	'var'          reduce using rule 21
	'write'        reduce using rule 21
	'{'            reduce using rule 21
	'}'            reduce using rule 21
	L_integ        reduce using rule 21
	L_doubl        reduce using rule 21
	L_charac       reduce using rule 21
	L_quoted       reduce using rule 21
	L_Id           reduce using rule 21
	%eof           reduce using rule 21


State 24

	ListId -> Id ',' . ListId                           (rule 75)

	L_Id           shift, and enter state 6

	Id             goto state 11
	ListId         goto state 25

State 25

	ListId -> Id ',' ListId .                           (rule 75)

	'*'            reduce using rule 75
	':='           reduce using rule 75
	'='            reduce using rule 75
	'['            reduce using rule 75
	'bool'         reduce using rule 75
	'char'         reduce using rule 75
	'float'        reduce using rule 75
	'int'          reduce using rule 75
	'string'       reduce using rule 75


State 26

	Type -> '[' Integer . ']' Type                      (rule 22)

	']'            shift, and enter state 81


State 27

	Value -> Integer .                                  (rule 67)

	'!'            reduce using rule 67
	'!='           reduce using rule 67
	'%'            reduce using rule 67
	'&'            reduce using rule 67
	'&&'           reduce using rule 67
	'('            reduce using rule 67
	')'            reduce using rule 67
	'*'            reduce using rule 67
	'+'            reduce using rule 67
	','            reduce using rule 67
	'-'            reduce using rule 67
	'/'            reduce using rule 67
	';'            reduce using rule 67
	'<'            reduce using rule 67
	'<='           reduce using rule 67
	'='            reduce using rule 67
	'=='           reduce using rule 67
	'>'            reduce using rule 67
	'>='           reduce using rule 67
	'['            reduce using rule 67
	']'            reduce using rule 67
	'break'        reduce using rule 67
	'continue'     reduce using rule 67
	'false'        reduce using rule 67
	'for'          reduce using rule 67
	'func'         reduce using rule 67
	'if'           reduce using rule 67
	'read'         reduce using rule 67
	'return'       reduce using rule 67
	'true'         reduce using rule 67
	'try'          reduce using rule 67
	'var'          reduce using rule 67
	'write'        reduce using rule 67
	'{'            reduce using rule 67
	'||'           reduce using rule 67
	'}'            reduce using rule 67
	L_integ        reduce using rule 67
	L_doubl        reduce using rule 67
	L_charac       reduce using rule 67
	L_quoted       reduce using rule 67
	L_Id           reduce using rule 67
	%eof           reduce using rule 67


State 28

	Value -> Double .                                   (rule 68)

	'!'            reduce using rule 68
	'!='           reduce using rule 68
	'%'            reduce using rule 68
	'&'            reduce using rule 68
	'&&'           reduce using rule 68
	'('            reduce using rule 68
	')'            reduce using rule 68
	'*'            reduce using rule 68
	'+'            reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'/'            reduce using rule 68
	';'            reduce using rule 68
	'<'            reduce using rule 68
	'<='           reduce using rule 68
	'='            reduce using rule 68
	'=='           reduce using rule 68
	'>'            reduce using rule 68
	'>='           reduce using rule 68
	'['            reduce using rule 68
	']'            reduce using rule 68
	'break'        reduce using rule 68
	'continue'     reduce using rule 68
	'false'        reduce using rule 68
	'for'          reduce using rule 68
	'func'         reduce using rule 68
	'if'           reduce using rule 68
	'read'         reduce using rule 68
	'return'       reduce using rule 68
	'true'         reduce using rule 68
	'try'          reduce using rule 68
	'var'          reduce using rule 68
	'write'        reduce using rule 68
	'{'            reduce using rule 68
	'||'           reduce using rule 68
	'}'            reduce using rule 68
	L_integ        reduce using rule 68
	L_doubl        reduce using rule 68
	L_charac       reduce using rule 68
	L_quoted       reduce using rule 68
	L_Id           reduce using rule 68
	%eof           reduce using rule 68


State 29

	Value -> Char .                                     (rule 69)

	'!'            reduce using rule 69
	'!='           reduce using rule 69
	'%'            reduce using rule 69
	'&'            reduce using rule 69
	'&&'           reduce using rule 69
	'('            reduce using rule 69
	')'            reduce using rule 69
	'*'            reduce using rule 69
	'+'            reduce using rule 69
	','            reduce using rule 69
	'-'            reduce using rule 69
	'/'            reduce using rule 69
	';'            reduce using rule 69
	'<'            reduce using rule 69
	'<='           reduce using rule 69
	'='            reduce using rule 69
	'=='           reduce using rule 69
	'>'            reduce using rule 69
	'>='           reduce using rule 69
	'['            reduce using rule 69
	']'            reduce using rule 69
	'break'        reduce using rule 69
	'continue'     reduce using rule 69
	'false'        reduce using rule 69
	'for'          reduce using rule 69
	'func'         reduce using rule 69
	'if'           reduce using rule 69
	'read'         reduce using rule 69
	'return'       reduce using rule 69
	'true'         reduce using rule 69
	'try'          reduce using rule 69
	'var'          reduce using rule 69
	'write'        reduce using rule 69
	'{'            reduce using rule 69
	'||'           reduce using rule 69
	'}'            reduce using rule 69
	L_integ        reduce using rule 69
	L_doubl        reduce using rule 69
	L_charac       reduce using rule 69
	L_quoted       reduce using rule 69
	L_Id           reduce using rule 69
	%eof           reduce using rule 69


State 30

	Value -> String .                                   (rule 70)

	'!'            reduce using rule 70
	'!='           reduce using rule 70
	'%'            reduce using rule 70
	'&'            reduce using rule 70
	'&&'           reduce using rule 70
	'('            reduce using rule 70
	')'            reduce using rule 70
	'*'            reduce using rule 70
	'+'            reduce using rule 70
	','            reduce using rule 70
	'-'            reduce using rule 70
	'/'            reduce using rule 70
	';'            reduce using rule 70
	'<'            reduce using rule 70
	'<='           reduce using rule 70
	'='            reduce using rule 70
	'=='           reduce using rule 70
	'>'            reduce using rule 70
	'>='           reduce using rule 70
	'['            reduce using rule 70
	']'            reduce using rule 70
	'break'        reduce using rule 70
	'continue'     reduce using rule 70
	'false'        reduce using rule 70
	'for'          reduce using rule 70
	'func'         reduce using rule 70
	'if'           reduce using rule 70
	'read'         reduce using rule 70
	'return'       reduce using rule 70
	'true'         reduce using rule 70
	'try'          reduce using rule 70
	'var'          reduce using rule 70
	'write'        reduce using rule 70
	'{'            reduce using rule 70
	'||'           reduce using rule 70
	'}'            reduce using rule 70
	L_integ        reduce using rule 70
	L_doubl        reduce using rule 70
	L_charac       reduce using rule 70
	L_quoted       reduce using rule 70
	L_Id           reduce using rule 70
	%eof           reduce using rule 70


State 31

	ExpL -> Id .                                        (rule 43)
	ExpR -> Id . '(' ')'                                (rule 63)
	ExpR -> Id . '(' ListExpR ')'                       (rule 64)

	'!'            reduce using rule 43
	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&'            reduce using rule 43
	'&&'           reduce using rule 43
	'('            shift, and enter state 80
			(reduce using rule 43)

	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'='            reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'['            reduce using rule 43
	']'            reduce using rule 43
	'break'        reduce using rule 43
	'continue'     reduce using rule 43
	'false'        reduce using rule 43
	'for'          reduce using rule 43
	'func'         reduce using rule 43
	'if'           reduce using rule 43
	'read'         reduce using rule 43
	'return'       reduce using rule 43
	'true'         reduce using rule 43
	'try'          reduce using rule 43
	'var'          reduce using rule 43
	'write'        reduce using rule 43
	'{'            reduce using rule 43
	'||'           reduce using rule 43
	'}'            reduce using rule 43
	L_integ        reduce using rule 43
	L_doubl        reduce using rule 43
	L_charac       reduce using rule 43
	L_quoted       reduce using rule 43
	L_Id           reduce using rule 43
	%eof           reduce using rule 43


State 32

	ExpL -> ExpL . '[' ExpR ']'                         (rule 44)
	ExpR -> ExpL .                                      (rule 62)

	'!'            reduce using rule 62
	'!='           reduce using rule 62
	'%'            reduce using rule 62
	'&'            reduce using rule 62
	'&&'           reduce using rule 62
	'('            reduce using rule 62
	')'            reduce using rule 62
	'*'            reduce using rule 62
	'+'            reduce using rule 62
	','            reduce using rule 62
	'-'            reduce using rule 62
	'/'            reduce using rule 62
	';'            reduce using rule 62
	'<'            reduce using rule 62
	'<='           reduce using rule 62
	'='            reduce using rule 62
	'=='           reduce using rule 62
	'>'            reduce using rule 62
	'>='           reduce using rule 62
	'['            shift, and enter state 79
			(reduce using rule 62)

	']'            reduce using rule 62
	'break'        reduce using rule 62
	'continue'     reduce using rule 62
	'false'        reduce using rule 62
	'for'          reduce using rule 62
	'func'         reduce using rule 62
	'if'           reduce using rule 62
	'read'         reduce using rule 62
	'return'       reduce using rule 62
	'true'         reduce using rule 62
	'try'          reduce using rule 62
	'var'          reduce using rule 62
	'write'        reduce using rule 62
	'{'            reduce using rule 62
	'||'           reduce using rule 62
	'}'            reduce using rule 62
	L_integ        reduce using rule 62
	L_doubl        reduce using rule 62
	L_charac       reduce using rule 62
	L_quoted       reduce using rule 62
	L_Id           reduce using rule 62
	%eof           reduce using rule 62


State 33

	ExpR -> ExpR . '+' ExpR                             (rule 46)
	ExpR -> ExpR . '-' ExpR                             (rule 47)
	ExpR -> ExpR . '*' ExpR                             (rule 48)
	ExpR -> ExpR . '/' ExpR                             (rule 49)
	ExpR -> ExpR . '%' ExpR                             (rule 50)
	ExpR -> ExpR . '==' ExpR                            (rule 51)
	ExpR -> ExpR . '!=' ExpR                            (rule 52)
	ExpR -> ExpR . '<' ExpR                             (rule 53)
	ExpR -> ExpR . '<=' ExpR                            (rule 54)
	ExpR -> ExpR . '>' ExpR                             (rule 55)
	ExpR -> ExpR . '>=' ExpR                            (rule 56)
	ExpR -> ExpR . '&&' ExpR                            (rule 57)
	ExpR -> ExpR . '||' ExpR                            (rule 58)
	ListExpR -> ExpR .                                  (rule 76)
	ListExpR -> ExpR . ',' ListExpR                     (rule 77)

	'!'            reduce using rule 76
	'!='           shift, and enter state 65
	'%'            shift, and enter state 66
	'&'            reduce using rule 76
	'&&'           shift, and enter state 67
	'('            reduce using rule 76
	')'            reduce using rule 76
	'*'            shift, and enter state 68
			(reduce using rule 76)

	'+'            shift, and enter state 69
	','            shift, and enter state 70
	'-'            shift, and enter state 71
			(reduce using rule 76)

	'/'            shift, and enter state 72
	';'            reduce using rule 76
	'<'            shift, and enter state 73
	'<='           shift, and enter state 74
	'=='           shift, and enter state 75
	'>'            shift, and enter state 76
	'>='           shift, and enter state 77
	'break'        reduce using rule 76
	'continue'     reduce using rule 76
	'false'        reduce using rule 76
	'for'          reduce using rule 76
	'func'         reduce using rule 76
	'if'           reduce using rule 76
	'read'         reduce using rule 76
	'return'       reduce using rule 76
	'true'         reduce using rule 76
	'try'          reduce using rule 76
	'var'          reduce using rule 76
	'write'        reduce using rule 76
	'{'            reduce using rule 76
	'||'           shift, and enter state 78
	'}'            reduce using rule 76
	L_integ        reduce using rule 76
	L_doubl        reduce using rule 76
	L_charac       reduce using rule 76
	L_quoted       reduce using rule 76
	L_Id           reduce using rule 76
	%eof           reduce using rule 76


State 34

	ExpR -> Value .                                     (rule 61)
